--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^17.0.2",
     "@angular/compiler": "^17.0.2",
     "@angular/core": "^17.0.2",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.0.2",
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
@@ -28,6 +29,7 @@
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
     "echarts": "^5.5.0",
+    "firebase": "^10.12.0",
     "ionicons": "^7.0.0",
     "ngx-echarts": "^17.2.0",
     "rxjs": "~7.8.0",
